--- a/style.css
+++ b/style.css
@@ -1,3 +1,128 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: 'Rubik', sans-serif;
+  overflow: hidden;
+}
+
 #map {
-  height: 30rem;
+  height: 100vh;
+}
+
+.address-tracker {
+  background-image: url('images/pattern-bg.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 2rem;
+}
+
+.address-tracker h1 {
+  text-align: center;
+  color: white;
+}
+
+.input {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+}
+
+.ip-input {
+  width: 25rem;
+  height: 3rem;
+  border-bottom-left-radius: 10px;
+  border-top-left-radius: 10px;
+  outline: none;
+  border: none;
+  padding: 1rem;
+}
+
+.ip-input:active {
+  border: none;
+  outline: none;
+}
+
+.ip-submit {
+  height: 3rem;
+  border: none;
+  width: 3rem;
+  cursor: pointer;
+  border-bottom-right-radius: 10px;
+  border-top-right-radius: 10px;
+  background-color: hsl(0, 0%, 17%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ip-submit:hover {
+  background-color: hsl(0, 0%, 59%);
+}
+
+.addresses {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  border-radius: 10px;
+  margin: 0 auto;
+  margin-top: 2rem;
+  background-color: white;
+  max-width: 70rem;
+  height: 8rem;
+  position: relative;
+  margin-bottom: -6rem;
+  z-index: 401;
+  box-shadow: 0 3px 10px hsl(0, 0%, 17%);
+}
+
+.row {
+  border-right: 1px solid hsl(0, 0%, 59%);
+  padding-right: 5rem;
+  padding-left: 2rem;
+}
+
+.row:last-child {
+  border-right: none;
+}
+
+.row p {
+  color: hsl(0, 0%, 59%);
+  font-size: 0.8rem;
+  font-weight: bold;
+  margin-bottom: 0.8rem;
+}
+
+.row h3 {
+  color: hsl(0, 0%, 17%);
+  font-size: 1.4rem;
+}
+
+@media (max-width: 59.375em) {
+  .addresses {
+    flex-direction: column;
+    height: 23rem;
+    text-align: center;
+    margin-bottom: -15rem;
+  }
+
+  .row {
+    border-right: none;
+    padding: 0;
+  }
+
+  .row p {
+    margin-bottom: 0.3rem;
+  }
+
+  .row h3 {
+    margin-bottom: 2rem;
+  }
 }
